<resources>
    <string name="app_name">Sendypick</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="write_the_code">Write the code!</string>
    <string name="incorrect_code">Incorrect code!</string>
    <string name="there_is_no_such_code">There is no such code!</string>
    <string name="write_an_email">Write an Email!</string>
    <string name="incorrect_email">Incorrect Email!</string>
    <string name="welcome">Welcome</string>
    <string name="incorrect_login_or_password">Incorrect login or password!</string>
    <string name="write_a_name">Write a name!</string>
    <string name="write_a_phone_number">Write a phone number!</string>
    <string name="write_a_password">Write a password!</string>
    <string name="min_length_is_6_symbols">Min. length is 6 symbols!</string>
    <string name="press_back_again_to_exit">Press BACK again to exit!</string>
    <string name="details_sent_to_email">Details sent to Email!</string>
    <string name="wait_a_second">Wait a second</string>
    <string name="make_a_photo_first">Make a photo first!</string>
    <string name="rotated">Rotated</string>
    <string name="sent">Sent!</string>
    <string name="available_new_version">Available new version</string>
    <string name="update_the_app">Update the app!</string>
    <string name="update">Update</string>
    <string name="continue_s">Continue</string>
    <string name="no_internet_connection">No Internet connection!</string>
    <string name="try_to_refresh_the_app">Try to refresh the app!</string>
    <string name="refresh">Refresh</string>
    <string name="email_address">Email Address</string>
    <string name="reset">Reset</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="your_unique_code">Your unique code:</string>
    <string name="copy_and_send_this_to_your_pair">Copy and send this to your pair</string>
    <string name="write_your_pair_s_code">Write your pair\'s code:</string>
    <string name="done">Done</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="my_code">My code</string>
    <string name="friends_connected_people">Friends (Connected people)</string>
    <string name="leave_a_room">Leave a room</string>
    <string name="others">Others</string>
    <string name="sign_out">Sign out</string>
    <string name="room_deleting">Room deleting</string>
    <string name="are_you_sure_you_want_to_leave_a_room">Are you sure you want to leave a room?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="there_are_no_friends">There are no friends :(</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="sending">Sending...</string>
    <string name="send">Send</string>
    <string name="disable_ads">Disable ads</string>
    <string name="you_already_have_it">You already have it!</string>
    <string name="purchased_successfully">Purchased successfully</string>
    <string name="unable_to_load_play_market_services">Unable to load Play market services!</string>
</resources>