<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_code"
            android:checkable="false"
            android:title="@string/my_code" />
        <item
            android:id="@+id/nav_friends"
            android:checkable="false"
            android:title="@string/friends_connected_people" />
        <item
            android:checkable="false"
            android:id="@+id/nav_leave_a_room"
            android:title="@string/leave_a_room" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item android:id="@+id/nav_disable_ads"
                android:title="@string/disable_ads"/>
            <item
                android:id="@+id/nav_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>