<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_image_view"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingRight="40dp"
                android:text="Sendypick"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/your_unique_code"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/code_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_content_copy_24"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:drawableTint="@color/black"
                android:textSize="24sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/copy_and_send_this_to_your_pair"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/done_button"
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_style"
                android:text="@string/done"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>